adding department component

--- a/src/app/department/department.component.html
+++ b/src/app/department/department.component.html
@@ -1,5 +1,6 @@
 <p>department works!</p>
 <label>Code:</label>
-<input type="text" formControlName="Code"/>
+<input id="code" type="text" />
 <label>Description:</label>
-<input type="text" formControlName="Description"/>
+<input id="Description" type="text" />
+<button id="BtnRead" (click)="ReadData()">Read Data</button>
